authentication/Keycloak/keycloak-with-route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's http port.
    labels:
      application: keycloak
    name: keycloak
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentConfig: keycloak
- apiVersion: route.openshift.io/v1
  id: keycloak
  kind: Route
  metadata:
    annotations:
      description: Route for application's service.
    labels:
      application: keycloak
    name: keycloak
  spec:
    host: ""
    tls:
      termination: edge
    to:
      name: keycloak
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: keycloak
    name: keycloak
  spec:
    replicas: 1
    selector:
      deploymentConfig: keycloak
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          application: keycloak
          deploymentConfig: keycloak
        name: keycloak
      spec:
        containers:
        - args:
          - start-dev
          image: quay.io/keycloak/keycloak:19.0.3
          livenessProbe:
            failureThreshold: 100
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
          name: keycloak
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 300
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
          securityContext:
            privileged: false
          volumeMounts:
          - mountPath: /opt/keycloak/data
            name: empty
        volumes:
        - emptyDir: {}
          name: empty
    triggers:
    - type: ConfigChange
kind: List
metadata: {}
